a little fixe in the position .rmbt-visible_burger

--- a/app/src/pages/parts/hero_block_1/style.less
+++ b/app/src/pages/parts/hero_block_1/style.less
@@ -379,3 +379,7 @@
     });
   }
 }
+
+.rmbt-visible_burger{
+  top: @height_top_row !important;
+}
